# ai-agent

./: .gitignore  CONTRIBUTING.md  README.md
ai-platform/: README.md  package-lock.json  package.json
ai-platform/src/app/: globals.css  layout.tsx  page.tsx
ai-platform/src/app/apps/: page.tsx
ai-platform/src/app/docs/: page.tsx
ai-platform/src/app/ecosystem/: page.tsx
ai-platform/src/app/models/: page.tsx
ai-platform/src/app/pricing/: page.tsx
ai-platform/src/app/tools/: page.tsx
ai-platform/src/components/: Footer.tsx  Navbar.tsx
ai-timeline/: .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
ai-timeline/src/app/: globals.css  layout.tsx  page.tsx
ai-timeline/src/components/: FilterBar.tsx  Footer.tsx  Header.tsx  StatsSection.tsx  Timeline.tsx  TimelineEvent.tsx
ai-timeline/src/data/: aiHistory.ts
ai-timeline/src/types/: index.ts
ai-tools-comparison/: README.md
applyflow-cn/: package-lock.json  package.json
applyflow-cn/src/app/: page.tsx
applyflow-cn/src/app/challenges/: page.tsx
applyflow-cn/src/app/contests/: page.tsx
applyflow-cn/src/app/dashboard/: page.tsx
applyflow-cn/src/app/jobs/: page.tsx
applyflow-cn/src/app/login/: page.tsx
applyflow-cn/src/components/: Nav.tsx
applyflow-cn/src/components/ui/: Badge.tsx  Callout.tsx  Input.tsx  Select.tsx  Skeleton.tsx
applyflow-us/: .gitignore  COMPLETION_CHECKLIST.md  JOB_DETAIL_INDEX.md  JOB_DETAIL_INTEGRATION_EXAMPLES.md  MOCK_SESSION_INTEGRATION.md  package-lock.json  package.json
applyflow-us/src/app/login/: page.tsx
applyflow-us/src/app/signup/: page.tsx
applyflow-us/src/components/: LimitBanner.tsx  PaywallModal.tsx  SkeletonLoader.tsx
claude-code/: README.md
claude-code/ink-ui/: README.md  package.json  tsconfig.json
claude-code/ink-ui/src/: App.tsx  index.tsx
claude-code/ink-ui/src/components/: Dice3D.tsx  Header.tsx  MessageList.tsx  ProgressBar.tsx  RainbowText.tsx  Spinner.tsx  StatusBar.tsx  Timer.tsx
claude-code/ink-ui/src/hooks/: useAnimationTick.ts
cli-demo/: README.md
cli-demo/c-examples/: .gitignore  01_basic_getopt.c  02_readline_repl.c  03_subcommands.c  Makefile
cli-demo/ink-ui/: README.md  package-lock.json
cli-demo/ink-ui/src/: App.tsx
cli-demo/ink-ui/src/components/: Dice3D.tsx  MessageList.tsx  Spinner.tsx
cli-demo/ts-cli/: README.md  package-lock.json  package.json
cli-demo/ts-cli/src/: index.ts
cli-demo/ts-cli/src/commands/: calc.ts  chat.ts  dice.ts  palette.ts  run.ts  sys.ts  version.ts
cli-demo/ts-cli/src/core/: cmd.ts  logger.ts  types.ts
codeflow/: README.md
codeflow/backend/: Cargo.toml
codeflow/backend/src/: api.rs  build_parser.rs  github.rs  local.rs  main.rs
codeflow/backend/src/analyzer/: blast_radius.rs  dependency.rs  health.rs  mod.rs  patterns.rs  security.rs
codeflow/frontend/: package-lock.json  package.json
codeflow/frontend/src/: App.tsx  index.css  vite-env.d.ts
codeflow/frontend/src/api/: index.ts
codeflow/frontend/src/components/: BuildDepsPanel.tsx  EmptyState.tsx  FileBrowser.tsx  GraphView.tsx  GtestPanel.tsx  LocalRepoBrowser.tsx  RightPanel.tsx  Sidebar.tsx  TopBar.tsx
codeflow/frontend/src/hooks/: useAnalysis.ts  useFileBrowser.ts  useLocalRepo.ts  (+1 more)
codeflow/original/: README.md  index.html
dev-english/: README.md  package-lock.json  package.json
dev-english/src/app/: layout.tsx  page.tsx
dev-english/src/data/: commits.ts  review.ts
dev-roadmap/: README.md  backend.md  frontend.md  fullstack.md  llm-engineer.md
dify/: README.md
girlfriend-daily-reco/: README.md  app.js  index.html  server.py  start.sh  styles.css
github-crawler/: .gitignore  README.md
github-crawler/backend/: config.py  crawler.py  main.py  requirements.txt  storage.py  strategies.py  tests.py
github-crawler/frontend/: app.js  index.html  style.css
how-big-is-space/: README.md  index.html
how-big-is-space/src/: main.js  style.css
hr-dashboard/: DELIVERABLES.md  JOB_DETAIL_IMPLEMENTATION_SUMMARY.md  JOB_DETAIL_PAGE_DOCS.md  JOB_DETAIL_README.md  JOB_DETAIL_VISUAL_GUIDE.md  MOCK_SESSION_PAGE_DOCS.md  MOCK_SESSION_QUICK_REF.md  MOCK_SESSION_SUMMARY.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
hr-dashboard/src/app/: layout.tsx  page.tsx
hr-dashboard/src/components/: Badge.tsx  Button.tsx  ChallengeCard.tsx  DashboardCards.tsx  Header.tsx  Nav.tsx  SkillCard.tsx  StatsCard.tsx  Toast.tsx
hr-dashboard/src/styles/: globals.css
hr-dashboard/src/types/: index.ts
langchain/: README.md
modelbridge/: README.md  openapi.yaml
opencode/: README.md
opencode/tui-cli/src/: index.ts
seastar-future/: CMakeLists.txt  README.md
seastar-future/benchmarks/: future_benchmark.cpp
seastar-future/docs/: 01-seastar-future-architecture.md  02-reactor-model-scheduling.md  03-industrial-grade-optimization.md  04-comparison-and-benchmarks.md  05-benchmark-guide.md  06-why-no-queue.md
seastar-future/examples/: future_then_example.cpp  future_then_overview.cpp  future_then_primer.cpp  memory_example.cpp  memory_overview.cpp  network_example.cpp  network_overview.cpp  threadpool_example.cpp  threadpool_overview.cpp
seastar-future/include/seastar/: future.hh
seastar-future/tests/: future_test.cpp
tech-english/: README.md  package-lock.json  package.json  tailwind.config.ts
tech-english/src/components/: Header.tsx
tech-english/src/data/: reading.ts  vocabulary.ts
tianya-posts/: README.md  start.sh
tianya-posts/backend/: requirements.txt  server.py
tianya-posts/backend/static/: index.html
tianya-posts/frontend/: README.md  package.json
universe-sim/: README.md  index.html
universe-sim/src/: main.js  style.css
zhang-zai/: README.md  package-lock.json  package.json  tailwind.config.ts
zhang-zai/docs/: architecture.md
zhang-zai/src/app/: globals.css  layout.tsx  page.tsx
zhang-zai/src/components/: ArticleCard.tsx  ChapterCard.tsx  ChapterPage.tsx  Footer.tsx  Header.tsx
zhang-zai/src/data/: chapters.ts
zhang-zai/src/i18n/: en.ts  index.tsx  zh.ts
zhang-zai/src/types/: index.ts
(+50 files in other folders)
