[package]
name = "codeflow-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tower-http = { version = "0.5", features = ["cors"] }
regex = "1"
base64 = "0.22"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
